src/home/home.scss
@import '../common_css/common-variables';


$home-bg-color: #284162;

.home-root {
  /* this block makes home break out of the .container */
  width: 100vw;
  transform: translate(-50%, 0);
  position: relative;
  left: 50%;

  input.typeahead.form-control.input-lg.tt-input {
    //search bar isn't wide enough to contain all placeholder text
    font-size: 1em;
  }
}

.intro-box {
  padding: 30px 0 0;
  color: white;
  border-bottom: 10px solid #FF5E59;
  
  & > h1 {
    border-bottom: none !important;
  }

  // background image set in home.js, has non-static path
  background-position: 50% -8px;
  background-repeat: no-repeat;
  background-size: 101%;
  margin-left: -5px;
}

.intro-box > .container > h1 {
  border: none;
  font-size: 55px;
  font-weight: $lightFontWeight;
  margin-top: 25px;
}

.intro-box > .container > h2 {
  font-weight: $lightFontWeight;
  font-size: 20px;
}

.col-content.featured-col-content {
  color: #333 !important;
  background-color: #5787CD;
  border-radius: 10px;
  margin-top: 50px;
  height: auto;
  width: 100%;

  @media(min-width:1024px) {
    width: 95%;
  }
}

.col-content.misc-col-content {
  color: #333 !important;
  background-color: hsla(210, 45%, 82%, 1);
  border-radius: 10px;
}

.list-group-item--home {
  background-color: #fafafa;
  border-color: #ccc !important;
}

.badge.badge--is-new {
  background-color: #FF5E59; 
  color: #fcfcfc;
}

.flag {
  transform: translate(0, -20%);
  margin: 0;
}

.home-trinity-container {
  margin-top: 3rem;

  & > .frow {
    justify-content: space-between;
    
    @media(max-width:610px) {
      flex-direction: column;
    }

    & > .fcol-md-4 {

      @media(max-width:610px) {
        padding: 3% 2% 3% 2%;
      }

      @media(min-width:611px) {
        flex-basis: 30%;
        max-width: 30%;

        @media(max-width:767px) {
          flex: 1;
        }

        @media(max-width:1023px) {
          flex: 1;
        }
      }
    }
  }
}

.TrinityItem {
  @include unstyled-link;
  background-color: #767F89;
  border-radius: 10px;
  padding: 3rem;
  display: flex;
  flex-direction: column;
  align-items: center;

  transition: transform .2s ease-in-out;

  &:hover {
    transform: scale(1.2);
    @media(max-width:767px) {
      transform: scale(1.05);
    }
  }
}

.TrinityItem__Title {
  font-size: 2rem;
  line-height: 3rem;
  text-align: center;
  text-transform: uppercase;
  color: white;
}

.TrinityItem__Img {
  width: 10rem;
}

.home-body > .frow.home-cols {
  justify-content: space-between;
  margin-bottom: 5%;
}

.home-bg {
  background-color: $home-bg-color;
  position: relative;
}

.xtralinks {
  padding-top: 50px;

  & > .frow {
    justify-content: space-around;
  }
}

.linkcard {
  flex-basis: 100%;
  padding: 0px;
  &:hover {
    background-color: rgb(236, 236, 236) !important;
  }
}

